--- a/styles/home-styles/services.scss
+++ b/styles/home-styles/services.scss
@@ -30,3 +30,44 @@ $darkbg: #121212;
     grid-template-rows: repeat(3, 450px);
     border-bottom: 2px solid lightgrey;
 }
+
+@media only screen and (min-width: 768px) {
+    .services-list-container {
+        margin-top: 1%;
+        margin-bottom: 2%;
+        display: grid;
+        grid-template-columns: repeat(3, auto);
+        grid-template-rows: repeat(1, 480px);
+    }
+
+    .service {
+        border: 2px solid lightblue;
+    }
+
+    .fas {
+        font-size: 80px;
+    }
+
+    .icon-container {
+        width: 140px;
+        height: 140px;
+        display: inline-block;
+        margin-left: 34%;
+        margin-top: 5%;
+        margin-bottom: 5%;
+    }
+
+    .icon--styles {
+        color: white;
+        opacity: 0.9;
+    }
+
+    .title-container {
+        margin-top: 1%;
+        margin-bottom: 5%;
+    }
+
+    .title--styles {
+        font-size: 25px;
+    }
+}
