--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -164,3 +164,86 @@ $darkbg: #121212;
     font-size: 14px;
     color: white;
 }
+
+@media only screen and (min-width: 768px) {
+    // FOOTER //
+    .footer {
+        margin-top: 5%;
+        width: 100%;
+        height: 550px;
+        display: grid;
+        grid-template-columns: 40% auto;
+    }
+
+    .icons-child {
+        display: grid;
+        grid-template-columns: 50% auto;
+        margin-bottom: 2%;
+    }
+
+    .socials-container {
+        margin-top: 3%;
+    }
+
+    .socials {
+        margin-left: 10%;
+        margin-right: auto;
+    }
+
+    .social {
+        margin-top: 2%;
+        margin-right: 2%;
+        color: lighten($color: $primaryclr, $amount: 10);
+    }
+
+    .social {
+        cursor: pointer;
+    }
+
+    .payments-container {
+        margin-top: 3%;
+        margin-bottom: 0%;
+    }
+
+    .footer-info-container {
+        margin-top: 10%;
+    }
+
+    .footer-info {
+        margin-bottom: 0%;
+    }
+
+    .footer-info--styles {
+        font-family: $font2;
+        color: lighten($color: $primaryclr, $amount: 50);
+        font-size: 20px;
+    }
+
+    .info {
+        margin-right: 2%;
+    }
+
+    .info-txt {
+        font-size: 17px;
+        color: lighten($color: $primaryclr, $amount: 30);
+    }
+
+    .payments-title {
+        margin-top: 0.5%;
+        text-align: center;
+    }
+
+    .payment {
+        padding-top: 1.5%;
+        background-color: $secondaryclr;
+        width: 60px;
+        height: 45px;
+        border-radius: 45px;
+        color: lighten($color: $primaryclr, $amount: 50);
+    }
+
+    .footer-info {
+        margin-bottom: 5%;
+        margin-left: 15%;
+    }
+}
