--- a/styles/home-styles/slogan.scss
+++ b/styles/home-styles/slogan.scss
@@ -42,3 +42,39 @@ $darkbg: #121212;
     color: $primaryclr;
     line-height: 25px;
 }
+
+@media only screen and (min-width: 768px) {
+    .img-container {
+        background-color: beige;
+        display: block;
+        width: 100%;
+        margin-left: 0 auto;
+    }
+
+    .book-img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 750px;
+    }
+    .slogan {
+        padding: 2%;
+        text-align: center;
+    }
+
+    .slogan--styles {
+        font-size: 60px;
+    }
+
+    .slogan-description {
+        padding-left: 20%;
+        padding-right: 20%;
+        padding-bottom: 8%;
+        text-align: center;
+    }
+
+    .slogan-description--styles {
+        font-size: 32px;
+        line-height: 42px;
+    }
+}
