--- a/styles/home-styles/slogan.scss
+++ b/styles/home-styles/slogan.scss
@@ -52,6 +52,7 @@ $darkbg: #121212;
     }
 
     .book-img {
+        padding-top: 0%;
         display: block;
         margin-left: auto;
         margin-right: auto;
