--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -48,13 +48,13 @@ $darkbg: #121212;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    color: white;
 }
 
 .social {
     width: 35px;
     height: 35px;
     border-radius: 25px;
-    color: lighten($color: $primaryclr, $amount: 50);
 }
 
 .fab {
@@ -170,7 +170,7 @@ $darkbg: #121212;
     .footer {
         margin-top: 5%;
         width: 100%;
-        height: 550px;
+        height: 450px;
         display: grid;
         grid-template-columns: 40% auto;
     }
@@ -193,7 +193,7 @@ $darkbg: #121212;
     .social {
         margin-top: 2%;
         margin-right: 2%;
-        color: lighten($color: $primaryclr, $amount: 10);
+        color: white;
     }
 
     .social {
@@ -243,5 +243,9 @@ $darkbg: #121212;
     .footer-info {
         margin-bottom: 5%;
         margin-left: 15%;
+    }
+
+    .policies {
+        padding: 1%;
     }
 }
