--- a/styles/home-styles/service.scss
+++ b/styles/home-styles/service.scss
@@ -84,8 +84,36 @@ $darkbg: #121212;
     text-decoration: none;
     font-family: $font;
     font-weight: 500;
-    font-size: 20px;
+    font-size: 16px;
     color: lighten($color: $primaryclr, $amount: 60);
     padding: 4%;
-    border-radius: 50px;
+    border-radius: 15px;
+}
+
+@media only screen and (min-width: 768px) {
+    .btn-container {
+        margin-top: 0%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .icon-container {
+        margin-left: 39%;
+        margin-top: 5%;
+        margin-bottom: 5%;
+    }
+    .icon {
+        margin-left: 24%;
+        margin-top: 20%;
+    }
+    .btn-path {
+        margin-left: 0%;
+        margin-right: 0%;
+    }
+
+    .btn-path--styles {
+        font-size: 18px;
+        color: lighten($color: $primaryclr, $amount: 60);
+    }
 }
