--- a/styles/home-styles/service.scss
+++ b/styles/home-styles/service.scss
@@ -106,13 +106,23 @@ $darkbg: #121212;
     }
 
     .icon-container {
-        margin-left: 39%;
-        margin-top: 5%;
-        margin-bottom: 5%;
+        margin-left: 0%;
+        margin-right: 0%;
+        margin-top: 0%;
+        margin-bottom: 0%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .icon-centering {
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     .icon {
-        margin-left: 24%;
-        margin-top: 20%;
+        margin-left: 0%;
+        margin-top: 0%;
     }
     .btn-path {
         margin-left: 0%;
