fix mobile responsiveness

--- a/styles/home-styles/free-section.scss
+++ b/styles/home-styles/free-section.scss
@@ -98,6 +98,9 @@ $darkbg: #121212;
         text-align: center;
     }
 
+    .registration-title {
+        margin-top: 6.2%;
+    }
     .free-assistance-summary {
         text-align: center;
     }
