--- a/styles/home.scss
+++ b/styles/home.scss
@@ -1,10 +1,9 @@
-.pageWrapper {
-    min-height: 100vh;
+.page-wrapper {
+    width: 100%;
 }
 
-@media (max-width: 600px) {
-    .grid {
-        width: 100%;
-        flex-direction: column;
+@media only screen and (max-width: 380px) {
+    .page-wrapper {
+        width: 125%;
     }
 }
