--- a/styles/home-styles/free-section.scss
+++ b/styles/home-styles/free-section.scss
@@ -105,3 +105,9 @@ $darkbg: #121212;
         text-align: center;
     }
 }
+
+@media only screen and (max-width: 380px) {
+    .assistance-img {
+        max-width: 480px;
+    }
+}
