--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -14,6 +14,25 @@ $secondaryclr: #021eb5;
     align-items: center;
 }
 
+.service-flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.arrow-right {
+    margin-left: 5%;
+    transition: all 0.2s;
+}
+
+.rotate {
+    animation: rotate 0.2s forwards;
+}
+
+.unrotate {
+    animation: unrotate 0.2s forwards;
+}
+
 .navbar-container {
     position: absolute;
     width: 95%;
@@ -28,6 +47,35 @@ $secondaryclr: #021eb5;
         0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
 }
 
+.services-tab {
+    position: absolute;
+    top: 105%;
+    padding: 2%;
+    left: 5%;
+}
+
+.services-tab--styles {
+    background-color: darken($color: $secondaryclr, $amount: 20);
+    border-radius: 5px;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+        0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+}
+
+.services-tab-grid {
+    display: grid;
+    grid-template-rows: repeat(4, 50px);
+}
+
+.service-item {
+    padding: 2%;
+}
+
+.service-item--styles {
+    text-decoration: none;
+    font-family: $font;
+    font-weight: 600;
+    color: lighten($color: $secondaryclr, $amount: 40);
+}
 .link {
     text-align: center;
     padding-top: 28px;
@@ -43,6 +91,24 @@ $secondaryclr: #021eb5;
     font-family: $font;
     font-weight: 600;
     color: lighten($color: $secondaryclr, $amount: 40);
+}
+
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(90deg);
+    }
+}
+
+@keyframes unrotate {
+    from {
+        transform: rotate(90deg);
+    }
+    to {
+        transform: rotate(0deg);
+    }
 }
 
 @media only screen and (max-width: 380px) {
